--- a/node/package.json
+++ b/node/package.json
@@ -1,7 +1,6 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,13 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.1",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "node": "^18.20.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3"
   },
-  "type": "module"
+  "type": "module",
+  "description": ""
 }
-
-
-
-
