--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "node": "^18.20.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
-    "socket.io": "^4.7.5",
-    "cors": "^2.8.5"
+    "socket.io": "^4.7.5"
   },
   "type": "module",
   "description": ""
