Fixed DB connection prob

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,10 +6,10 @@ COPY . .
 
 RUN npm install
 
-ENV DB_USER="postgres" \
-    DB_HOST="db" \
-    DB_NAME="postgres" \
-    DB_PASSWORD="1234" \
-    DB_PORT="5432"
+ENV POSTGRES_USER="postgres" \
+    POSTGRES_HOST="db" \
+    POSTGRES_NAME="postgres" \
+    POSTGRES_PASSWORD="1234" \
+    POSTGRES_PORT="5432"
 
 EXPOSE 3000
