--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "node": "^18.20.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "stripe": "^15.4.0"
   },
   "type": "module",
   "description": ""
