--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.2.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
