--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "node": "^18.20.0",
     "nodemon": "^3.1.0",
-    "pg": "^8.11.3",
+    "pg": "^8.11.5",
     "socket.io": "^4.7.5"
   },
   "type": "module",
