added profil pic and name to carpool card

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=3000
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=123
 POSTGRES_NAME=ppp
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
