--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "bcryptjs": "^2.4.3",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-select": "^5.8.0"
