--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "node": "^18.20.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "socket.io": "^4.7.5"
