--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "bcryptjs": "^2.4.3",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
