--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "bcryptjs": "^2.4.3",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
