--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "bcryptjs": "^2.4.3",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "stripe": "^15.9.0"
   }
 }
