--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
