--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
     "bcryptjs": "^2.4.3",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
