--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.30.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-select": "^5.8.0",
     "stripe": "^15.8.0"
